# moire-potential

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/: lint.yml
scripts/constrained_opt/: diag_moving.py  plotting.py  plotting_2D.py  tasks.py  workflow.py
scripts/gap_potential/: plotting.py  tasks.py  workflow.py
scripts/geometry/: generate_plots.py
src/functions/: bandstructure.py  heat_map.py  util.py
structures/: cells.txt
structures/1.00_2967/: before_niggli.json  bilayer-info.json  initial.json  plot-zscan_ml.json  relax_ml  results-asr.zscan_ml.json  structure_ml.json  unrelaxed_ml.json  zscan_ml.traj
structures/1.00_2973/: before_niggli.json  bilayer-info.json  initial.json  plot-zscan_ml.json  relax_ml  results-asr.zscan_ml.json  structure_ml.json  unrelaxed_ml.json  zscan_ml.traj
structures/1.05_3027/: before_niggli.json  bilayer-info.json  initial.json  plot-zscan_ml.json  relax_ml  results-asr.zscan_ml.json  structure_ml.json  unrelaxed_ml.json  zscan_ml.traj
structures/1.05_3033/: before_niggli.json  bilayer-info.json  initial.json  plot-zscan_ml.json  relax_ml  results-asr.zscan_ml.json  structure_ml.json  unrelaxed_ml.json  zscan_ml.traj
structures/1.09_3093/: before_niggli.json  bilayer-info.json  initial.json  plot-zscan_ml.json  relax_ml  results-asr.zscan_ml.json  structure_ml.json  unrelaxed_ml.json  zscan_ml.traj
structures/1.09_3099/: asr.moire.relax_ml.8247739.out  asr.moire.zscan_ml.8236160.err  before_niggli.json  bilayer-info.json  initial.json  plot-zscan_ml.json  relax_ml  results-asr.zscan_ml.json  zscan_ml.traj  (+2 more)
(+78 files in other folders)
