[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Moire-Potential"
description = "A description of the moire potential project"  # Optional: Add a project description
version = "0.1"
readme = "README.md"

dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.7.0",
    "gpaw>=24.1.0",
    "ase>=3.22.0"
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = [
    "flake8>=7.1.1",
    "mypy>=1.15.0",
]
